--- a/templates/reports.html
+++ b/templates/reports.html
@@ -16,54 +16,56 @@
     {% block main_content %}
 
         <div class="reports-container">
-            <div class="reports-row">
-                <div class="reports-header">
+        <div class="reports-header">
                     <div class="reports-container">
                         <span class="reports-title">Reports<span/>   
                     </div>
-                </div>
-                <div class="reports-message-container">
                     <div class="reports-message-row">
                         <p>Reports will be generated and exported to Excel.</p>
                     </div>
-                    <div class="report-items">
+                </div>
+            <div class="reports-row">
+                <div class="report-items">
                         <div class="report-item">
-                            <label class="section-title" for="date-range" >Vehicle logs<label/>
+                            <label class="section-title" for="date-range" >VEHICLES<label/>
                             <div class="date-range">
                                 <div class="date-item">
-                                    <span class="from-title date-title">From</span>
+                                    <span class="from-title date-title">Report From</span>
                                     <input type="datetime-local" name="dtlPicker1" id="from-date" class="date-input"/>
                                 </div>
                                 <div class="date-item">
-                                    <span class="from-title date-title">To</span>
+                                    <span class="from-title date-title">Report To</span>
                                     <input type="datetime-local" name="dtlPicker2" id="to-date" class="date-input"/>
                                 </div>
                             </div>
-                            <div class="validation-error_message datetime-error">Pick a valid date</div>
+                            {% if error %}
+                                <div class="validation-error_message datetime-error">Pick a valid date</div>
+                            {% endif %}
                             <div class="report-buttons">
                                 <button class="submit-button generate-button">Generate</button>
                                 <button class="submit-button download-button">Download</button>
                             </div>
                         </div>
                         <div class="report-item">
-                            <label class="section-title" for="date-range" >Users<label/>
+                            <label class="section-title" for="date-range" >USERS<label/>
                             <div class="date-range">
                                 <div class="date-item">
-                                    <span class="from-title date-title">from</span>
+                                    <span class="from-title date-title">Report From</span>
                                     <input type="datetime-local" name="dtlPicker3" id="from-date" class="date-input"/>
                                 </div>
                                 <div class="date-item">
-                                    <span class="from-title date-title">to</span>
+                                    <span class="from-title date-title">Report To</span>
                                     <input type="datetime-local" name="dtlPicker" class="date-input" id="to-date"/>
                                 </div>
                             </div>
-                            <div class="validation-error_message datetime-error">Pick a valid date</div>
+                            {% if error %}
+                                <div class="validation-error_message datetime-error">Pick a valid date</div>
+                            {% endif %}
                             <div class="report-buttons">
                                 <button class="submit-button generate-button">Generate</button>
                                 <button class="submit-button download-">Download</button>
                             </div>
-                        </div>
-                    </div>   
+                        </div>   
                 </div>
             </div>
         </div>
