--- a/static/css/main.css
+++ b/static/css/main.css
@@ -501,7 +501,7 @@ p {
 .reports-row {
     margin: 1em 8em;
     padding: 1em;
-    height: 585.285px;
+    height: 585px;
 }
 
 .survaillance-container {
@@ -511,9 +511,12 @@ p {
 
 .vehicles-container,
 .account-container {
-    margin: 0;
-    padding: .5rem;
-    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    margin: 3.5rem 0;
+    padding: .55rem;
+}
+
+.account-container {
+    margin-top: 3.25rem;
 }
 
 .stream-button {
@@ -634,10 +637,16 @@ p {
     padding: 0 .5em;
     margin-top: .875rem;
     display: grid;
-    height: 450px;
+    height: 80%;
     grid-gap: .7rem;
     grid-template-rows: auto;
     overflow-y: auto;
+}
+
+.vehicles-list {
+    overflow-y: auto;
+    margin-top: .5rem;
+    height: 400px;
 }
 
 .list-item {
@@ -650,7 +659,7 @@ p {
 
 .list-item-grid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
 }
 
 .item-grid-entry {
@@ -679,8 +688,16 @@ p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin: 2.2rem 0;
+    padding: 0;
+}
+
+.reports-header {
+    margin-top: .75rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .reports-title {
@@ -689,17 +706,19 @@ p {
 }
 
 .report-items {
-    padding: .5rem 3rem;
-    display: flex;
-    flex-direction: column;
+    padding: .25rem 3rem;
+    display: grid;
+    grid-template-rows: auto;
+    gap: 1rem;
     align-items: center;
     justify-content: center;
 }
 
 .report-item {
-    margin-bottom: .5rem;
+    margin: 0;
     padding: .75rem 2rem;
     display: flex;
+    flex-direction: column;
     border-radius: .5rem;
     box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
@@ -709,6 +728,7 @@ p {
 }
 
 .date-range {
+    margin: .5rem 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: .75rem;
@@ -721,9 +741,9 @@ p {
 }
 
 .section-title {
-    font-size: .75rem;
+    font-size: .95rem;
     font-weight: 700;
-    margin: 8px 2px;
+    margin: 15px 5px;
 }
 
 .date-title {
@@ -745,34 +765,104 @@ p {
 }
 
 .user-aside {
-    padding: .5rem;
+    padding: .875rem;
     border-radius: .5rem;
-    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    margin: 0 5.5rem;
+}
+
+.search-input {
+    padding: .5rem 1.5rem;
+    border-radius: .25rem;
+}
+
+.search-input-control {
+    text-align: start;
+    font-size: inherit;
+    width: 250px;
 }
 
 .account-row {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    margin: 0;
+    height: 690px;
+    padding: 0;
+    grid-template-rows: 1fr 5fr;
 }
 
 .user-aside-row {
-    margin-top: 3rem;
+    margin: 0 .5rem;
     display: flex;
-    flex-direction: column;
+    display: grid;
+    justify-content: flex-start;
     align-items: center;
-    justify-content: center;
+    gap: 10rem;
+    max-width: 650px;
+    padding: .5rem .25rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+    grid-template-columns: 1fr 6fr;
 }
 
 .user-avatar-container {
-    margin-bottom: 3.25rem;
+    margin-bottom: 0;
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+
+.name-and-edit-container,
+.entities-container {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    gap: .875rem;
+}
+
+.entity-icon {
+    margin-right: .5rem;
+    font-size: 1.25rem;
+}
+
+.entity-name,
+.entity-count,
+.user-name,
+.user-role {
+    font-weight: 600;
+}
+
+.lists-area-row {
+    margin-top: 1rem;
+}
+
+.names-row {
+    display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+}
+
+.user-edit-button {
+    margin-left: 1rem;
+    padding: .25rem .5rem;
+    border-radius: .15rem;
+    color: orangered;
+    cursor: pointer;
+}
+
+.user-edit-button:hover {
+    background-color: rgb(209, 203, 203);
+    cursor: pointer;
+}
+
+.profile-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .user-avatar {
     font-size: 5.75rem;
+    justify-self: flex-start;
 }
 
 .admin-title {
@@ -784,15 +874,16 @@ p {
 .account-control-container {
     display: flex;
     align-items: center;
+    width: 100%;
 }
 
 .account-input-control {
     height: 100%;
     border: none;
-    margin-right: .75rem;
+    margin-right: .25rem;
     text-align: center;
     padding: .80rem .25rem;
-    border-radius: .25rem;
+    border-radius: 0;
 }
 
 .account-action-buttons {
@@ -847,8 +938,7 @@ p {
 .account-lists-area {
     flex-grow: 1;
     border-radius: .5rem;
-    margin-top: .5rem;
-    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
+    margin-top: 1.5rem;
 }
 
 
@@ -856,5 +946,5 @@ p {
 
 .account-list-item {
     margin: .5rem .25rem;
-    border: .5px solid black;
+    box-shadow: rgb(0 0 0 / 10%) 0px 0px 5px 0px, rgb(0 0 0 / 10%) 0px 0px 1px 0px;
 }
