--- a/templates/account.html
+++ b/templates/account.html
@@ -1,66 +1,42 @@
-{% extends "base.html" %}
-{% block title %}Account{% endblock %}
-{% block head %}
-    {{ super() }}
-{% endblock %}
-{% block body %}
+{% extends "base.html" %} {% block title %}Account{% endblock %} {% block head %} {{ super() }} {% endblock %} {% block body %} {% block header %} {{ super() }} {% endblock %} {% block navigation %} {{ super() }}
+<!--Enter navigation markup-->
+{% endblock %} {% block main_content %}
 
-    {% block header %}
-        {{ super() }}
-    {% endblock %}
-
-    {% block navigation %}
-        {{ super() }}
-        <!--Enter navigation markup-->
-    {% endblock %}
-
-
-    {% block main_content %}
-        
-    <div class="account-container">
-        <div class="account-row">
-            <div class="user-aside">
-                <div class="user-aside-row">
+<div class="account-container">
+    <div class="account-row">
+        <div class="user-aside">
+            <div class="user-aside-row">
+                <div class="profile-container">
                     <div class="user-avatar-container">
-                        <i class="fas fa-user-alt user-avatar"></i>
-                        <span class="admin-title">Adminstrator</span>
+                        <i class="fa-solid fa-circle-user user-avatar"></i>
                     </div>
-                    <div class="username account-control-container">
-                        <i class="fas fa-user-circle account-icon"></i>
-                        <input type="text" class="account-input-control" value="Username" name="username-input"/>
-                        
-                    </div>
-                    <div class="user-phone account-control-container">
-                        <i class="fas fa-eye account-icon"></i>
-                        <input type="password" class="account-input-control" value="*********" name="password-input"/>
-                        
-                    </div>
-                    <div class="user-password account-control-container">
-                        <i class="fas fa-phone-alt account-icon"></i>
-                        <input type="text" class="account-input-control" value="0778275503" name="phone-input"/>
-                        
-                    </div>
-                    <div class="account-action-buttons">
-                        <button class="submit-button edit-button"><i class="fas fa-edit"></i></button>
-                        <button class=" delete-button submit-button"><i class="fas fa-save"></i></button>
-                    </div>
-                </div> 
-            </div>
-            <div class="account-main-container">
-                <div class="account-tabs-container">
-                    <div class="account-tabs-row">
-                        <div class="account-tab">
-                            <span class="tab-title">Users</span>
-                            <span class="tab-count">5</span>
+                    <div class="name-and-edit-container">
+                        <div class="names-row">
+                            <span class="user-name">Bruce@1998</span>
+                            <i class="user-edit-button"><i class="fa-solid fa-pen"></i></i>
                         </div>
-                        <div class="account-tab">
-                            <span class="tab-title">Vehicles</span>
-                            <span class="tab-count">3</span>
-                        </div>
+                        <span class="user-role">SYSTEM USER</span>
                     </div>
                 </div>
+                <div class="entities-container">
+                    <div class="entity-item">
+                        <i class="fa-solid fa-car entity-icon"></i>
+                        <span class="entity-name">Vehicles</span>
+                        <span class="entity-count">4</span>
+                    </div>
+                    <div class="entity-item">
+                        <i class="fa-solid fa-circle-user entity-icon"></i>
+                        <span class="entity-name">Users</span>
+                        <span class="entity-count">2</span>
+                    </div>
+                </div>
+            </div>
+            <div class="account-main-container">
+
                 <div class="account-lists-area">
                     <div class="lists-area-row">
+                        <div class="serach-container">
+                            <input name="search-input" class="input-item search-input-control" placeholder="Search vehicles" type="text"> </div>
                         <div class="vehicles-list">
                             <div class="list-item account-list-item">
                                 <div class="list-item-grid">
@@ -69,28 +45,8 @@
                                         <span class="item-value"> ADR 0987</span>
                                     </div>
                                     <div class="item-grid-entry">
-                                        <span class="item-title">Drive in date</span>
-                                        <span class="item-value"> 23/04/2015 09.45</span>
-                                    </div>
-                                    <div class="item-grid-entry">
-                                        <span class="item-title">Drive out date</span>
-                                        <span class="item-value"> 23/04/2015 15.45</span>
-                                    </div>
-                                    <div class="item-grid-entry">
-                                        <span class="item-title">Served By</span>
-                                        <div class="vehicle-server">Bruce Chimoyo</div>
-                                    </div>
-                                    <div class="item-grid-entry">
-                                        <span class="item-title">Actions</span>
-                                        <button class="submit-button delete-button">Delete</button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="list-item account-list-item">
-                                <div class="list-item-grid">
-                                    <div class="item-grid-entry">
-                                        <span class="item-title">Vehicle License</span>
-                                        <span class="item-value"> ADR 0987</span>
+                                        <span class="item-title">Image</span>
+                                        <span class="item-value"> image</span>
                                     </div>
                                     <div class="item-grid-entry">
                                         <span class="item-title">Drive in date</span>
@@ -115,6 +71,38 @@
                                     <div class="item-grid-entry">
                                         <span class="item-title">Vehicle License</span>
                                         <span class="item-value"> ADR 0987</span>
+                                    </div>
+                                    <div class="item-grid-entry">
+                                        <span class="item-title">Image</span>
+                                        <span class="item-value"> image</span>
+                                    </div>
+                                    <div class="item-grid-entry">
+                                        <span class="item-title">Drive in date</span>
+                                        <span class="item-value"> 23/04/2015 09.45</span>
+                                    </div>
+                                    <div class="item-grid-entry">
+                                        <span class="item-title">Drive out date</span>
+                                        <span class="item-value"> 23/04/2015 15.45</span>
+                                    </div>
+                                    <div class="item-grid-entry">
+                                        <span class="item-title">Served By</span>
+                                        <div class="vehicle-server">Bruce Chimoyo</div>
+                                    </div>
+                                    <div class="item-grid-entry">
+                                        <span class="item-title">Actions</span>
+                                        <button class="submit-button delete-button">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="list-item account-list-item">
+                                <div class="list-item-grid">
+                                    <div class="item-grid-entry">
+                                        <span class="item-title">Vehicle License</span>
+                                        <span class="item-value"> ADR 0987</span>
+                                    </div>
+                                    <div class="item-grid-entry">
+                                        <span class="item-title">Image</span>
+                                        <span class="item-value"> image</span>
                                     </div>
                                     <div class="item-grid-entry">
                                         <span class="item-title">Drive in date</span>
@@ -140,10 +128,4 @@
             </div>
         </div>
     </div>
-    {% endblock %}
-
-    {% block footer %}
-        {{ super() }}
-    {% endblock %}
-
-{% endblock %}
+    {% endblock %} {% block footer %} {{ super() }} {% endblock %} {% endblock %}
