--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
 
-    <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <!--Custom styles and icons-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
@@ -74,7 +72,7 @@
     <div class="footer-container">
         <div class="footer-row">
             <small class="footer-text">
-                    Product of Craftech &copy; 2022
+                    Bruce Takura Chimoyo (N0188160R) &copy; 2022
                 </small>
         </div>
     </div>
